--- a/algo viz/index.html
+++ b/algo viz/index.html
@@ -8,9 +8,14 @@
 </head>
 
 <body>
-    <div class="main">
-        <div class="center">
-            <!-- <div class="node"></div>  -->
+    <div class="container">
+        <div class="navBar">
+            <button class="startBTN" onclick="callAll()">Start DFS</button>
+        </div>
+        <div class="main">
+            <div class="center">
+                <!-- <div class="node"></div>  -->
+            </div>
         </div>
     </div>
 </body>
