--- a/algo viz/index.html
+++ b/algo viz/index.html
@@ -10,7 +10,8 @@
 <body>
     <div class="container">
         <div class="navBar">
-            <button class="startBTN" onclick="callAll()">Start DFS</button>
+            <!-- <button class="startBTN" onclick="callAll('dfs')">Start DFS</button> -->
+            <button class="startBTN" onclick="callAll('bfs')">Start BFS</button>
         </div>
         <div class="main">
             <div class="center">
