--- a/algo viz/index.html
+++ b/algo viz/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="navBar">
             <!-- <button class="startBTN" onclick="callAll('dfs')">Start DFS</button> -->
-            <button class="startBTN" onclick="callAll('bfs')">Start BFS</button>
+            <button class="startBTN" onclick="callAll('aStar')">Start A*</button>
         </div>
         <div class="main">
             <div class="center">
