--- a/algo viz/index.html
+++ b/algo viz/index.html
@@ -11,7 +11,8 @@
     <div class="container">
         <div class="navBar">
             <!-- <button class="startBTN" onclick="callAll('dfs')">Start DFS</button> -->
-            <button class="startBTN" onclick="callAll('aStar')">Start A*</button>
+            <!-- <button class="startBTN" onclick="callAll('aStar')">start A*</button> -->
+            <button class="startBTN" onclick="callAll('dijkstra')">Start Dijkstra</button>
         </div>
         <div class="main">
             <div class="center">
