Recursive Division for maze generation completed, changed the interface
solved a bug in Dijkstra

--- a/algo viz/index.html
+++ b/algo viz/index.html
@@ -10,9 +10,10 @@
 <body>
     <div class="container">
         <div class="navBar">
-            <!-- <button class="startBTN" onclick="callAll('dfs')">Start DFS</button> -->
+            <!-- <button class="startBTN" onclick="callAll('dfs')">DFS</button> -->
             <!-- <button class="startBTN" onclick="callAll('aStar')">start A*</button> -->
-            <button class="startBTN" onclick="callAll('dijkstra')">Start Dijkstra</button>
+            <button class="startBTN" onclick="callAll('dijkstra')">Dijkstra</button>
+            <button onclick="callAll('wall')">Create  Walls</button>
         </div>
         <div class="main">
             <div class="center">
