clear all function created no need to refresh!!!!

--- a/algo viz/index.html
+++ b/algo viz/index.html
@@ -10,10 +10,13 @@
 <body>
     <div class="container">
         <div class="navBar">
-            <!-- <button class="startBTN" onclick="callAll('dfs')">DFS</button> -->
-            <!-- <button class="startBTN" onclick="callAll('aStar')">start A*</button> -->
-            <button class="startBTN" onclick="callAll('dijkstra')">Dijkstra</button>
-            <button onclick="callAll('wall')">Create  Walls</button>
+            <button onclick="callAll('dfs')">DFS</button>
+            <button onclick="callAll('bfs')">BFS</button>
+            <button onclick="callAll('dijkstra')">Dijkstra</button>
+            <button onclick="callAll('aStar')">start A*</button>
+            <button onclick="callAll('wall')">Create Walls</button>
+            <button onclick="clearAll()">Clear All</button>
+
         </div>
         <div class="main">
             <div class="center">
