added some minor functions

--- a/algo viz/index.html
+++ b/algo viz/index.html
@@ -16,6 +16,9 @@
             <button onclick="callAll('aStar')">start A*</button>
             <button onclick="callAll('wall')">Create Walls</button>
             <button onclick="clearAll()">Clear All</button>
+            <button onclick="clearPath()">Clear Path</button>
+            <button onclick="toggleStart('start')">Change Start</button>
+            <button onclick="toggleStart('end')">Change End</button>
 
         </div>
         <div class="main">
