reduced grid size for fast loading

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a href="#" class="butn" onclick="callAll('bfs')">BFS</a>
                 <a href="#" class="butn" onclick="callAll('dijkstra')">Dijkstra</a>
                 <a href="#" class="butn" onclick="callAll('aStar')">A*</a>
-                <a href="#" class="butn" onclick="callAll('wall')">Create Walls</a>
+                <a href="#" class="butn" onclick="callAll('wall')">Create Maze</a>
                 <a href="#" class="butn" onclick="clearAll()">Clear All</a>
                 <a href="#" class="butn" onclick="clearPath()">Clear Path</a>
                 <a href="#" class="butn" onclick="toggleStart('start')">Shift Start</a>
